--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=minibankingsystem
 
 # Server
-server.port=3030
+server.port=${PORT:8080}
 
 # H2 Database
 spring.datasource.url=jdbc:h2:mem:bankdb
