--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,9 @@ spring.application.name=minibankingsystem
 # Server
 server.port=${PORT:8080}
 
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:bankdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/minibank?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-
-# JPA Logging
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
